modify deletecategories
